--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
 <a href="woln_z5_3.html" target="strony">Z5-wewnętrzny</a>
 <br>
 <a href="woln_z5_4.html" target="strony">Z5-liniowy</a>
-
+<br>
+<a href="woln_z6.html" target="strony">Zadanie 6</a>
+<br>
+<a href="woln_z7.html" target="strony">Zadanie 7</a>
+<br>
+<a href="woln_z8.html" target="strony">Zadanie 8</a>
+<br>
+<a href="woln_z9.html" target="strony">Zadanie 9</a>
+<br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
@@ -27,6 +35,7 @@
     <a href="woln_z5_2-kod.html" target="strony">Z5-zewnętrzny-kod</a><br>
     <a href="woln_z5_3-kod.html" target="strony">Z5-wewnętrzny-kod</a><br>
     <a href="woln_z5_4-kod.html" target="strony">Z5-liniowy-kod</a><br>
+    <a href="woln_z6-kod.html" target="strony">Z6-kod</a><br>
     
 </td>
 </tr>
