--- a/woln_z6-kod.html
+++ b/woln_z6-kod.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <p>woln_z6.html:</p>
-<textarea><html>
+<textarea cols="80" rows="25"><html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <LINK href="brze_z6.css" rel="stylesheet" type="text/CSS">
