--- a/woln_z8.html
+++ b/woln_z8.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Zadanie 8</title>
-        <link rel="Stylesheet" type="text/css" href="brze_z8.css">
+        <link rel="Stylesheet" href="woln_z8.css">
     </head>
     <body>
         <ol>
             <li><h1>gdzie jest wstawiany</h1></li>
             <p>Wewnętrzny arkusz stylów wstawia się zawsze w części nagłówkowej dokumentu (pomiędzy znacznikami <head> a </head> ). Można go zastosować, gdy elementy które pragniemy poddać formatowaniu, występują wielokrotnie na stronie i wszystkim chcemy nadać takie same atrybuty (inne niż domyślne).</p>
             <li><h1>składnia teoretyczna</h1></li>
-            <p><textarea><style>
+            <p><textarea cols="55" rows="8"><style>
                 selektor { cecha: wartość; cecha2: wartość2... }
                 selektor2 { cecha: wartość; cecha2: wartość2... }
                 (...)
