--- a/index.html
+++ b/index.html
@@ -3,8 +3,29 @@
 <head>
     <link href="style.css" rel="stylesheet">
     <meta charset="utf-8">
+	        <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+
+  <nav class="site-nav">
+    <button class="side-menu-trigger">Menu</button>
+    <aside class="side-menu">
+      <ul>
+        <li>
+          <a href="">
+            Zadania
+          </a>
+        </li>
+        <li>
+          <a href="">
+            Kody do zadań
+          </a>
+        </li>
+      </ul>
+  </aside>
+  </nav>
+
 <table width=95% border="1" align="center">
 <tr>
 <td width=18% align=center>
@@ -27,6 +48,20 @@
 <br>
 <a href="woln_z9.html" target="strony">Zadanie 9</a>
 <br>
+<a href="woln_z10.html" target="strony">Zadanie 10</a>
+<br>
+<a href="woln_z11.html" target="strony">Zadanie 11</a>
+<br>
+<a href="woln_z12.html" target="strony">Zadanie 12</a>
+<br>
+<a href="woln_z13.html" target="strony">Zadanie 13</a>
+<br>
+<a href="woln_z14.html" target="strony">Zadanie 14</a>
+<br>
+<a href="woln_z16.html" target="strony">Zadanie 16</a>
+<br>
+<a href="woln_z18.html" target="strony">Zadanie 18</a>
+<br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
@@ -36,6 +71,7 @@
     <a href="woln_z5_3-kod.html" target="strony">Z5-wewnętrzny-kod</a><br>
     <a href="woln_z5_4-kod.html" target="strony">Z5-liniowy-kod</a><br>
     <a href="woln_z6-kod.html" target="strony">Z6-kod</a><br>
+    <a href="woln_z13-kod.html" target="strony">Z13-kod</a><br>
     
 </td>
 </tr>
