--- a/woln_5z_1.html
+++ b/woln_5z_1.html
@@ -13,7 +13,9 @@ p {
     <body>
         <!--Łukasz Wolny 06.01.2022-->
         <p>
-            Wolny
+            Wewnętrzny arkusz stylów
             </p>
+            Wolny .Kodowanie i STEM mogą wydawać się stworzone dla chłopców, ale pierwszą osobą, <br>
+            która napisała to, co współczesniee rozumiemy jako program komputerowy była Ada Lovelace.
         </body>
         </html>
