--- a/woln_z5_1-kod.html
+++ b/woln_z5_1-kod.html
@@ -5,7 +5,7 @@
         </head>
         <body>
             <p>woln_z5_3.html</p>
-            <textarea cols="55" rows="20"><!DOCTYPE html>
+            <textarea cols="55" rows="20" readonly><!DOCTYPE html>
                 <head>
                     <style>
                         /*Łukasz Wolny 06.01.2022*/
@@ -20,9 +20,11 @@
                     <body>
                         <!--Łukasz Wolny 06.01.2022-->
                         <p>
-                            Wolny
+                            Wewnętrzny arkusz stylów
                             </p>
+                            Wolny .Kodowanie i STEM mogą wydawać się stworzone dla chłopców, ale pierwszą osobą, <br>
+                            która napisała to, co współczesniee rozumiemy jako program komputerowy była Ada Lovelace.
                         </body>
-                    </html></textarea>
+                        </html></textarea>
             </body>
     </html>
