--- a/woln_z5_2-kod.html
+++ b/woln_z5_2-kod.html
@@ -5,7 +5,8 @@
         </head>
         <body>
             <p>woln_5z_2.html:</p>
-            <textarea cols="55" rows="13"><!DOCTYPE html>
+            <textarea cols="55" rows="13" readonly><!DOCTYPE html>
+                <!DOCTYPE html>
                 <head>
                     <link rel="stylesheet" href="woln_z5_2.css">
                     <meta charset="utf-8">
@@ -13,10 +14,11 @@
                     <body>
                         <!--Łukasz Wolny 06.01.2022-->
                         <p>
-                            Wolny
+                            Wolny. W 1945 roku ENIAC (Electronic Numerical Integrator and Computer) <br>
+                            został wykorzystany do obliczania trajektorii balistycznych podczas II wojny światowej.
                             </p>
                         </body>
-                    </html></textarea>
+                        </html></textarea>
                     <br>
                     <p>woln_z5_2.css:</p>
                     <textarea cols="50" rows="8">
