--- a/woln_z5_2.html
+++ b/woln_z5_2.html
@@ -6,7 +6,8 @@
     <body>
         <!--Łukasz Wolny 06.01.2022-->
         <p>
-            Wolny
+            Wolny. W 1945 roku ENIAC (Electronic Numerical Integrator and Computer) <br>
+            został wykorzystany do obliczania trajektorii balistycznych podczas II wojny światowej.
             </p>
         </body>
         </html>
