--- a/woln_z5_3-kod.html
+++ b/woln_z5_3-kod.html
@@ -5,7 +5,7 @@
         </head>
         <body>
             <p>woln_z5_3.html</p>
-            <textarea cols="55" rows="20"><!DOCTYPE html>
+            <textarea cols="65" rows="20" readonly><!DOCTYPE html>
                 <head>
                     <style>
                         /*Łukasz Wolny 06.01.2022*/
@@ -20,9 +20,10 @@
                     <body>
                         <!--Łukasz Wolny 06.01.2022-->
                         <p>
-                            Wolny
+                            Wolny. Najszybciej zyskującym popularność językiem programowania jest Python.<br>
+                            Wyprzedził już Javę, a szybciej rośnie tylko Rust.
                             </p>
                         </body>
-                    </html></textarea>
+                        </html></textarea>
             </body>
     </html>
