--- a/woln_z5_3.html
+++ b/woln_z5_3.html
@@ -13,7 +13,8 @@ p {
     <body>
         <!--Łukasz Wolny 06.01.2022-->
         <p>
-            Wolny
+            Wolny. Najszybciej zyskującym popularność językiem programowania jest Python.<br>
+            Wyprzedził już Javę, a szybciej rośnie tylko Rust.
             </p>
         </body>
         </html>
