--- a/woln_z5_4-kod.html
+++ b/woln_z5_4-kod.html
@@ -5,7 +5,7 @@
         </head>
         <body>
             <p>woln_z5_3.html</p>
-            <textarea cols="55" rows="20"><!DOCTYPE html>
+            <textarea cols="55" rows="20" readonly><!DOCTYPE html>
                 <head>
                     <style>
                         /*Łukasz Wolny 06.01.2022*/
@@ -20,9 +20,11 @@
                     <body>
                         <!--Łukasz Wolny 06.01.2022-->
                         <p>
-                            Wolny
+                            Wolny. Jądro Linux (ang. Linux kernel) jest to najważniejsza, wolna część uniksopodobnych <br>
+                            [tzn. zbliżonych budową do systemu Unix] systemów operacyjnych Linux napisana przez Linusa Torvaldsa w 1991 roku. <br>
+                            Największa część kodu napisana jest w języku C, z pewnymi rozszerzeniami GCC.<br>
                             </p>
                         </body>
-                    </html></textarea>
+                        </html></textarea>
             </body>
     </html>
