--- a/woln_z6-kod.html
+++ b/woln_z6-kod.html
@@ -1,12 +1,14 @@
+<!DOCTYPE html>
 <html>
 <head>
 </head>
 <body>
 <p>woln_z6.html:</p>
-<textarea cols="80" rows="25"><html>
+<textarea cols="80" rows="25" readonly><!DOCTYPE html>
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<LINK href="brze_z6.css" rel="stylesheet" type="text/CSS">
+<LINK href="woln_z6.css" rel="stylesheet" type="text/CSS">
 </head>
 <body>
 <p>:) usmiech</p>
@@ -15,15 +17,20 @@
 :/ zmieszanie
 <p>:D duzy usmiech</p>
 :C duzy smutek
-
+<!--Lukasz Wolny 10.01.2022-->
 </body>
 </html>
-p {
-color: green;
-font-size: 20px;
-}
-body {
-color: blue;
-font-size: 30px;
-}
-</body
+</textarea>
+<br>
+    <p> woln_z6.css </p>
+    <textarea cols="50" rows="15" readonly>
+        /*Łukasz Wolny 10.01.2022*/
+        p {
+            color: green;
+            font-size: 20px;
+            }
+            body {
+            color: blue;
+            font-size: 30px;
+            }
+    </textarea>
