--- a/woln_z7.html
+++ b/woln_z7.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
      <head>
      <meta charset="utf-8">
@@ -46,6 +46,6 @@
      <i>Jako wyraz "wartość" (w deklaracji stylu) wpisujemy dokładną wartość atrybutu (np:dla koloru tekstu będzie to: red,blue, 
          czy też #71E2B3 itd.). Wartość zależy ściśle od cechy, po której stoi w deklaracji.</i>  
     
-    
+    <!--Lukasz Wolny 10.01.2022-->
     </body>
 </html>
