--- a/woln_z8.html
+++ b/woln_z8.html
@@ -20,5 +20,7 @@
             <li><h1>jakie mogą być cechy i wartości?</h1></li>
             <p>np. color: red;, font-size: 20px;</p>
         </ol>
+
+        <!--Lukasz Wolny 03.01.2022-->
     </body>
 </html>
