--- a/woln_z9.html
+++ b/woln_z9.html
@@ -21,5 +21,6 @@
         <li><h1>Jakie są zalety zewnętrznego arkusza styli( dwie – z użyciem wyliczenia?</h1></li>
         <li><h1>Uwagi na temat pisania w CSS.</h1></li>
         </ol>
+        <!--Lukasz Wolny 10.01.2022-->
     </body>
 </html>
