--- a/woln_z5_4.html
+++ b/woln_z5_4.html
@@ -13,7 +13,9 @@ p {
     <body>
         <!--Łukasz Wolny 06.01.2022-->
         <p>
-            Wolny
+            Wolny. Jądro Linux (ang. Linux kernel) jest to najważniejsza, wolna część uniksopodobnych <br>
+            [tzn. zbliżonych budową do systemu Unix] systemów operacyjnych Linux napisana przez Linusa Torvaldsa w 1991 roku. <br>
+            Największa część kodu napisana jest w języku C, z pewnymi rozszerzeniami GCC.<br>
             </p>
         </body>
         </html>
