--- a/woln_z6.html
+++ b/woln_z6.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<LINK href="brze_z6.css" rel="stylesheet" type="text/CSS">
+<LINK href="woln_z6.css" rel="stylesheet" type="text/CSS">
 </head>
 <body>
 <p>:) usmiech</p>
@@ -10,6 +10,6 @@
 :/ zmieszanie
 <p>:D duzy usmiech</p>
 :C duzy smutek
-
+<!--Lukasz Wolny 10.01.2022-->
 </body>
 </html>
