--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
 <br>
 <a href="woln_z18.html" target="strony">Zadanie 18</a>
 <br>
+<a href="woln_z19.html" target="strony">Zadanie 19</a>
+<br>
+<a href="woln_z20.html" target="strony">Zadanie 20</a>
+<br>
+<a href="woln_z21.html" target="strony">Zadanie 21</a>
+<br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
@@ -72,6 +78,9 @@
     <a href="woln_z5_4-kod.html" target="strony">Z5-liniowy-kod</a><br>
     <a href="woln_z6-kod.html" target="strony">Z6-kod</a><br>
     <a href="woln_z13-kod.html" target="strony">Z13-kod</a><br>
+    <a href="woln_z19-kod.html" target="strony">Z19-kod</a><br>
+    <a href="woln_z20-kod.html" target="strony">Z20-kod</a><br>
+    <a href="woln_z21-kod.html" target="strony">Z21-kod</a><br>
     
 </td>
 </tr>
