--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
 <br>
 <a href="woln_z21.html" target="strony">Zadanie 21</a>
 <br>
+<a href="woln_z22.html" target="strony">Zadanie 22</a>
+<br>
+<a href="woln_z23.html" target="strony">Zadanie 23</a>
+<br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
@@ -81,6 +85,8 @@
     <a href="woln_z19-kod.html" target="strony">Z19-kod</a><br>
     <a href="woln_z20-kod.html" target="strony">Z20-kod</a><br>
     <a href="woln_z21-kod.html" target="strony">Z21-kod</a><br>
+    <a href="woln_z22-kod.html" target="strony">Z22-kod</a><br>
+    <a href="woln_z23-kod.html" target="strony">Z23-kod</a><br>
     
 </td>
 </tr>
