--- a/index.html
+++ b/index.html
@@ -1,77 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="style.css" rel="stylesheet">
     <meta charset="utf-8">
-	        <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-
-  <nav class="site-nav">
-    <button class="side-menu-trigger">Menu</button>
-    <aside class="side-menu">
-      <ul>
-        <li>
-          <a href="">
-            Zadania
-          </a>
-        </li>
-        <li>
-          <a href="">
-            Kody do zadań
-          </a>
-        </li>
-      </ul>
-  </aside>
-  </nav>
-
 <table width=95% border="1" align="center">
 <tr>
 <td width=18% align=center>
 <marquee bgcolor="red" align="top">Łukasz Wolny</marquee>
-<a href="woln_z2.html" target="strony">CSS Definicja</a>
-<br>
-<a href="woln_5z_1.html" target="strony">Z5-importowany</a>
-<br>
-<a href="woln_z5_2.html" target="strony">Z5-zewnętrzny</a>
-<br>
-<a href="woln_z5_3.html" target="strony">Z5-wewnętrzny</a>
-<br>
-<a href="woln_z5_4.html" target="strony">Z5-liniowy</a>
-<br>
-<a href="woln_z6.html" target="strony">Zadanie 6</a>
-<br>
-<a href="woln_z7.html" target="strony">Zadanie 7</a>
-<br>
-<a href="woln_z8.html" target="strony">Zadanie 8</a>
-<br>
-<a href="woln_z9.html" target="strony">Zadanie 9</a>
-<br>
-<a href="woln_z10.html" target="strony">Zadanie 10</a>
-<br>
-<a href="woln_z11.html" target="strony">Zadanie 11</a>
-<br>
-<a href="woln_z12.html" target="strony">Zadanie 12</a>
-<br>
-<a href="woln_z13.html" target="strony">Zadanie 13</a>
-<br>
-<a href="woln_z14.html" target="strony">Zadanie 14</a>
-<br>
-<a href="woln_z16.html" target="strony">Zadanie 16</a>
-<br>
-<a href="woln_z18.html" target="strony">Zadanie 18</a>
-<br>
-<a href="woln_z19.html" target="strony">Zadanie 19</a>
-<br>
-<a href="woln_z20.html" target="strony">Zadanie 20</a>
-<br>
-<a href="woln_z21.html" target="strony">Zadanie 21</a>
-<br>
-<a href="woln_z22.html" target="strony">Zadanie 22</a>
-<br>
-<a href="woln_z23.html" target="strony">Zadanie 23</a>
-<br>
+<a href="woln_z2.html" target="strony">CSS Definicja</a><br>
+<a href="woln_5z_1.html" target="strony">Z5-importowany</a><br>
+<a href="woln_z5_2.html" target="strony">Z5-zewnętrzny</a><br>
+<a href="woln_z5_3.html" target="strony">Z5-wewnętrzny</a><br>
+<a href="woln_z5_4.html" target="strony">Z5-liniowy</a><br>
+<a href="woln_z6.html" target="strony">Zadanie 6</a><br>
+<a href="woln_z7.html" target="strony">Zadanie 7</a><br>
+<a href="woln_z8.html" target="strony">Zadanie 8</a><br>
+<a href="woln_z9.html" target="strony">Zadanie 9</a><br>
+<a href="woln_z10.html" target="strony">Zadanie 10</a><br>
+<a href="woln_z11.html" target="strony">Zadanie 11</a><br>
+<a href="woln_z12.html" target="strony">Zadanie 12</a><br>
+<a href="woln_z13.html" target="strony">Zadanie 13</a><br>
+<a href="woln_z14.html" target="strony">Zadanie 14</a><br>
+<a href="woln_z16.html" target="strony">Zadanie 16</a><br>
+<a href="woln_z18.html" target="strony">Zadanie 18</a><br>
+<a href="woln_z19.html" target="strony">Zadanie 19</a><br>
+<a href="woln_z20.html" target="strony">Zadanie 20</a><br>
+<a href="woln_z21.html" target="strony">Zadanie 21</a><br>
+<a href="woln_z22.html" target="strony">Zadanie 22</a><br>
+<a href="woln_z23.html" target="strony">Zadanie 23</a><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
