--- a/woln_z14.html
+++ b/woln_z14.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=iso-8859-2">
+    <META CHARSET="utf-8">
     </head>
     <body>
     <h1> Sposoby określania kolorów </h1>
