--- a/woln_z2.html
+++ b/woln_z2.html
@@ -9,3 +9,4 @@ CSS - Kaskadowe Arkusze Stylów (z ang. Cascading Style Sheets) jest to specjaln
 elastycznego zarządzania sposobem formatowania (wyglądem) elementów znajdujących się na stronach WWW.<br>
 </body>
 </html>
+<!-- Lukasz Wolny 06.11.2021 -->
