--- a/woln_z21.html
+++ b/woln_z21.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
-<body>
-<style> td { border: 1px solid black; } </style>
-<table>
+<body bgcolor="white">
+<table border=1;>
 <tr>
-<td> Pojęcie </td> <td> Znaczenie pojęć </td>
+<th align=left>Co znaczy skrót ID?</th>
+<th align=left>Identyfikator</th>
 </tr>
 <tr>
-<td> Co znaczy skrót ID? </td> <td> identyfikator </td>
-<tr>
-<td>Jaki jest cel stosowania ID? </td> <td> ID się stosuje do zróżnicowania podobnych elementów </td> 
+<th align=left>Jaki jest cel stosowania ID?</th>
+<th align=left>zróżnicowanie</th>
 </tr>
 <tr>
-<td> Jakie jest znaczenie znaku # </td> <td> definiuje identyfikator (id)</td>
+<th align=left>Jakie jest znaczenie znaku # </th>
+<th align=left>Definiowanie identyfikatora</th>
 </tr>
 <tr>
-<td>  Jak następuje wywołanie ID(wraz z wytłumaczeniem)? </td> <td> Wywołanie identyfikatora to id="nazwa zdefiniowanego w CSS identyfikatora" czyli:
-Odpowiedni wpis składa się z selektora, do którego planujemy przypisać identyfikator, oraz z
-nazwy poprzedzonej znakiem #. </td>
+<th align=left>Jak następuje wywołanie ID (wraz z wytłumaczeniem)?</th>
+<th align=left>Odpowiedni wpis składa się z selektora, do którego planujemy przypisać identyfikator, oraz z 
+nazwy poprzedzonej znakiem #.
+</th>
 </tr>
 <tr>
-<td> Uwagi na temat stosowania ID (trzy) konieczne wyliczenia. </td> <td> <ul> <li>Elementy oznaczone ID muszą być unikatowe, tzn., że na jednej stronie może
-wystąpić tylko 1 element z takim ID. Jeśli nie mamy pewności, czy element wystąpi
-więcej niż raz to możemy bez obaw użyć 'class', które może być przypisane do
-nieskończenie wielu elementów na stronie <li> Podobnie jak klasy, identyfikatorów, możemy używać tyle razy, ile razy uznamy to za
-konieczne. Działanie takie jest błędem, ale nie wpływa na poprawność działania
-strony. <li> Różnica między id a classIdentyfikator może wystąpić tylko raz w całym
-dokumencie, natomiast klasę można powielać do woli. </ul>
+<th align=left>Uwagi na temat stosowania ID (trzy) konieczne wyliczenia</th>
+<th align=left>
+<ul>
+<li>Różnica między id a class -> Identyfikator może wystąpić tylko raz w całym 
+dokumencie, natomiast klasę można powielać do woli. </li>
+<li>Podobnie jak klasy, identyfikatorów, możemy używać tyle razy, ile razy uznamy to za 
+konieczne. Działanie takie jest błędem, ale nie wpływa na poprawność działania 
+strony.</li>
+<li>Elementy oznaczone ID muszą być unikatowe, tzn., że na jednej stronie może 
+wystąpić tylko 1 element z takim ID. Jeśli nie mamy pewności, czy element wystąpi 
+więcej niż raz to możemy bez obaw użyć 'class', które może być przypisane do 
+nieskończenie wielu elementów na stronie.</li>
+</ul></th>
+</tr>
+</table>
 </body>
 </html>
 <!-- Lukasz Wolny, 26.01.2022r.-->
