--- a/woln_z6.html
+++ b/woln_z6.html
@@ -1,15 +1,15 @@
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta charset="utf-8">
 <LINK href="woln_z6.css" rel="stylesheet" type="text/CSS">
 </head>
 <body>
-<p>:) usmiech</p>
+<p>:) uśmiech</p>
 :( smutek
 <p>:o zaskoczenie </p>
 :/ zmieszanie
-<p>:D duzy usmiech</p>
-:C duzy smutek
+<p>:D duży uśmiech</p>
+:C duży smutek
 <!--Lukasz Wolny 10.01.2022-->
 </body>
 </html>
