--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <td width=18% align=center>
 <marquee bgcolor="red" align="top">Łukasz Wolny</marquee>
 <a href="woln_z2.html" target="strony">CSS Definicja</a><br>
-<a href="woln_5z_1.html" target="strony">Z5-importowany</a><br>
+<a href="woln_z3.html" target="strony">CSS Cechy modyfikowania</a><br>
+<a href="woln_z4.html" target="strony">CSS Sposoby podłączania styli</a><br>
+<a href="woln_z5_1.html" target="strony">Z5-importowany</a><br>
 <a href="woln_z5_2.html" target="strony">Z5-zewnętrzny</a><br>
 <a href="woln_z5_3.html" target="strony">Z5-wewnętrzny</a><br>
 <a href="woln_z5_4.html" target="strony">Z5-liniowy</a><br>
@@ -41,7 +43,6 @@
     <a href="woln_z13-kod.html" target="strony">Z13-kod</a><br>
     <a href="woln_z19-kod.html" target="strony">Z19-kod</a><br>
     <a href="woln_z20-kod.html" target="strony">Z20-kod</a><br>
-    <a href="woln_z21-kod.html" target="strony">Z21-kod</a><br>
     <a href="woln_z22-kod.html" target="strony">Z22-kod</a><br>
     <a href="woln_z23-kod.html" target="strony">Z23-kod</a><br>
     
