--- a/woln_z18.html
+++ b/woln_z18.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <title>Karmasz</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta charset="UTF-8" />
     </head>
     <body>
     <!-- początek bloku DIV 3 -->
