--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
 </head>
 <body>
-<table width=95% border="1" align="center">
-<tr>
-<td width=18% align=center>
+    <table width="97%">
+    <td>
+<div class="b">
 <marquee bgcolor="red" align="top">Łukasz Wolny</marquee>
 <a href="woln_z2.html" target="strony">CSS Definicja</a><br>
 <a href="woln_z3.html" target="strony">CSS Cechy modyfikowania</a><br>
 <a href="woln_z4.html" target="strony">CSS Sposoby podłączania styli</a><br>
-<a href="woln_z5_1.html" target="strony">Z5-importowany</a><br>
-<a href="woln_z5_2.html" target="strony">Z5-zewnętrzny</a><br>
-<a href="woln_z5_3.html" target="strony">Z5-wewnętrzny</a><br>
-<a href="woln_z5_4.html" target="strony">Z5-liniowy</a><br>
+<a href="woln_z5_1.html" target="strony">Zadanie 5-importowany</a><br>
+<a href="woln_z5_2.html" target="strony">Zadanie 5-zewnętrzny</a><br>
+<a href="woln_z5_3.html" target="strony">Zadanie 5-wewnętrzny</a><br>
+<a href="woln_z5_4.html" target="strony">Zadanie 5-liniowy</a><br>
 <a href="woln_z6.html" target="strony">Zadanie 6</a><br>
 <a href="woln_z7.html" target="strony">Zadanie 7</a><br>
 <a href="woln_z8.html" target="strony">Zadanie 8</a><br>
@@ -31,10 +32,13 @@
 <a href="woln_z21.html" target="strony">Zadanie 21</a><br>
 <a href="woln_z22.html" target="strony">Zadanie 22</a><br>
 <a href="woln_z23.html" target="strony">Zadanie 23</a><br>
+<a href="woln_z24.html" target="strony">Zadanie 24</a><br>
+<a href="woln_z25.html" target="strony">Zadanie 25</a><br>
+</div>
 </td>
-<td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
+<td align=center><div class="a"><iframe width=1050 height=650 name="strony" src="start.html" border="0"></iframe></div>
 </td>
-<td width=18% align=center><a href="start.html" target="strony">Start</a><br>
+<td width=18% align=center><div class="b"><a href="start.html" target="strony">Start</a><br>
     <a href="woln_z5_1-kod.html" target="strony">Z5-importowany-kod</a><br>
     <a href="woln_z5_2-kod.html" target="strony">Z5-zewnętrzny-kod</a><br>
     <a href="woln_z5_3-kod.html" target="strony">Z5-wewnętrzny-kod</a><br>
@@ -45,7 +49,7 @@
     <a href="woln_z20-kod.html" target="strony">Z20-kod</a><br>
     <a href="woln_z22-kod.html" target="strony">Z22-kod</a><br>
     <a href="woln_z23-kod.html" target="strony">Z23-kod</a><br>
-    
+</div>
 </td>
 </tr>
 </table>
