--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
 <a href="woln_z23.html" target="strony">Zadanie 23</a><br>
 <a href="woln_z24.html" target="strony">Zadanie 24</a><br>
 <a href="woln_z25.html" target="strony">Zadanie 25</a><br>
+<a href="woln_z32.html" target="strony">Zadanie 32</a><br>
+<a href="woln_z33.html" target="strony">Zadanie 33</a><br>
+<a href="woln_z34.html" target="strony">Zadanie 34</a><br>
+<a href="woln_z35.html" target="strony">Zadanie 35</a><br>
+<a href="woln_z36.html" target="strony">Zadanie 36</a><br>
+<a href="woln_z37.html" target="strony">Zadanie 37</a><br>
+<a href="woln_z38.html" target="strony">Zadanie 38</a><br>
+<a href="woln_z39.html" target="strony">Zadanie 39</a><br>
+<a href="woln_z40.html" target="strony">Zadanie 40</a><br>
+<a href="woln_z53.html" target="strony">Zadanie 53</a><br>
+<a href="woln_z54.html" target="strony">Zadanie 54</a><br>
+<a href="woln_z55.html" target="strony">Zadanie 55</a><br>
 </div>
 </td>
 <td align=center><div class="a"><iframe width=1050 height=650 name="strony" src="start.html" border="0"></iframe></div>
@@ -49,6 +61,10 @@
     <a href="woln_z20-kod.html" target="strony">Z20-kod</a><br>
     <a href="woln_z22-kod.html" target="strony">Z22-kod</a><br>
     <a href="woln_z23-kod.html" target="strony">Z23-kod</a><br>
+    <a href="woln_z25-kod.html" target="strony">z25-kod</a><br>
+    <a href="woln_z33-kod.html" target="strony">z33-kod</a><br>
+    <a href="woln_z34-kod.html" target="strony">z34-kod</a><br>
+    <a href="woln_z36-kod.html" target="strony">z36-kod</a><br>
 </div>
 </td>
 </tr>
